@@ -71,3 +71,14 @@ ADD_EXECUTABLE(obdtripcompare ${OBDTRIPCOMPARE_SRCS})
 TARGET_LINK_LIBRARIES(obdtripcompare ${OBDTRIPCOMPARE_LIBS})
 
 
+SET(OBDBOXWHISKER_SRCS
+	boxwhisker.c
+)
+
+SET(OBDBOXWHISKER_LIBS ${CKSQLITE_LIBRARIES} ckobdinfo m)
+
+ADD_EXECUTABLE(obdboxwhisker ${OBDBOXWHISKER_SRCS})
+TARGET_LINK_LIBRARIES(obdboxwhisker ${OBDBOXWHISKER_LIBS})
+
+
+
